<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddShiftFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="30dp"
            android:orientation="horizontal"
            android:textAlignment="center"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/logoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="@string/logo_text"
                android:textColor="@color/logoColor"
                android:textSize="100sp"
                android:textStyle="bold" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="42dp"
                android:layout_height="64dp"
                android:contentDescription="@string/logo_content_description"
                android:src="@drawable/ic_baseline_add_box_24" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginEnd="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_start_text"
                app:endIconMode="clear_text"
                app:helperText="Tidspunktet til vagten startede"
                app:startIconContentDescription="@string/content_description_date_end_icon"

                app:startIconDrawable="@drawable/ic_baseline_timer_24"
                app:startIconTint="@color/purple_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_start_tw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/work_end_text"
                app:endIconMode="clear_text"
                app:helperText="Tidspunktet til vagten sluttede"
                app:startIconContentDescription="@string/content_description_date_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_timer_24"
                app:startIconTint="@color/purple_200">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/work_end_tw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goToExtraAdditionFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="@string/extra_addition"
                app:cornerRadius="15dp"
                app:icon="@drawable/icons8_money_box_24" />

            <Button
                android:id="@+id/addShiftButton"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_shift_button_text"
                app:icon="@drawable/ic_baseline_add_task_24" />

            <Button
                android:id="@+id/cancelButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cancel_text"
                app:icon="@drawable/ic_baseline_cancel_24" />


        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>